--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   animated_text_kit: ^4.2.2
+  firebase_core: ^1.19.1
+  firebase_auth: ^3.4.1
+  cloud_firestore: ^3.2.1
+
 
 dev_dependencies:
   flutter_test:
