--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,12 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   animated_text_kit: ^4.2.2
+  modal_progress_hud_nsn: ^0.2.1
+
   firebase_core: ^1.19.1
   cloud_firestore: ^3.2.1
   firebase_auth: ^3.4.1
+
 
 
 dev_dependencies:
